<resources>
    <string name="app_name">Weather App</string>
    <string name="unit">UNIT</string>
    <string name="unit_metric">C</string>
    <string name="unit_imperial">F</string>
    <string name="no_permission">Please give location permission so the app can display the weather forecast. :)</string>
    <string name="give_permission">Grant permission</string>
    <string name="gps_not_enabled">GPS is not Enabled!</string>
    <string name="ask_turn_gps_on">Do you want to turn on GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="humidity">HUMIDITY</string>
    <string name="clouds">CLOUDS</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="wind_degree">WIND DEGREE</string>
    <string name="temperature">%1$sº%2$s</string>
    <string name="percentage">%1$s\%</string>
    <string name="weather_icon">Weather icon</string>
</resources>
