<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/layout_main_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|center_horizontal"
            android:weightSum="1"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/txtMetricUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgWeatherIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:scaleType="fitCenter"
                android:layout_weight=".25"
                android:contentDescription="@string/weather_icon"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"/>

        <LinearLayout android:id="@+id/layout_measures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/humidity"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txtHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/clouds"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txtClouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wind_speed"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txtWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wind_degree"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/txtWindDeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listForecast5Days"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/forecast_day_item"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</LinearLayout>
